add files to easily deploy the website on github pages

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/project-jangu",
+            "outputPath": "dist/ProjectJangu",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -94,6 +94,12 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
+          }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/ProjectJangu/"
           }
         }
       }
