--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:gh-pages": "ng build --output-path=dist/ProjectJangu --base-href \"/ProjectJangu/\"",
+    "deploy:gh-pages": "gh-pages -d dist/ProjectJangu/browser",
+    "deploy": "ng deploy",
+    "deploy:full": "npm run build:gh-pages && npm run deploy:gh-pages",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -32,6 +36,8 @@
     "@angular/cli": "^19.2.11",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
